NetBSD Problem Report #41929

From jmcneill@pipes.invisible.ca  Mon Aug 24 10:19:50 2009
Return-Path: <jmcneill@pipes.invisible.ca>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 1606B63BDF9
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 24 Aug 2009 10:19:50 +0000 (UTC)
Message-Id: <20090824102033.740323A647@pipes.invisible.ca>
Date: Mon, 24 Aug 2009 06:20:33 -0400 (EDT)
From: jmcneill@invisible.ca
Reply-To: jmcneill@invisible.ca
To: gnats-bugs@gnats.NetBSD.org
Subject: genfb and machdep.acpi_vbios_reset=2 interaction
X-Send-Pr-Version: 3.95

>Number:         41929
>Category:       port-i386
>Synopsis:       genfb and machdep.acpi_vbios_reset=2 interaction
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    jmcneill
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Aug 24 10:20:00 +0000 2009
>Closed-Date:    Mon Aug 24 11:36:04 +0000 2009
>Last-Modified:  Mon Aug 24 11:40:02 +0000 2009
>Originator:     Jared D. McNeill
>Release:        NetBSD 5.99.15
>Organization:

>Environment:


System: NetBSD pipes.invisible.ca 5.99.15 NetBSD 5.99.15 (MONOLITHIC) #31: Mon Aug 24 06:12:39 EDT 2009 jmcneill@soyuz:/home/jmcneill/branches/src/sys/arch/i386/compile/obj/MONOLITHIC i386
Architecture: i386
Machine: i386
>Description:
	The genfb driver on x86 needs to use a similar strategy to vga when
	the machdep.acpi_vbios_reset sysctl is set to 2, with the additional
	functionality of restoring the previous VESA VBE mode after initiating
	VGA POST.
>How-To-Repeat:

>Fix:


>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: port-i386-maintainer->jmcneill
Responsible-Changed-By: jmcneill@NetBSD.org
Responsible-Changed-When: Mon, 24 Aug 2009 11:36:04 +0000
Responsible-Changed-Why:
I fixed it.


State-Changed-From-To: open->closed
State-Changed-By: jmcneill@NetBSD.org
State-Changed-When: Mon, 24 Aug 2009 11:36:04 +0000
State-Changed-Why:
Resolved.


From: "Jared D. McNeill" <jmcneill@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41929 CVS commit: src/sys/arch/x86/x86
Date: Mon, 24 Aug 2009 11:35:27 +0000

 Module Name:	src
 Committed By:	jmcneill
 Date:		Mon Aug 24 11:35:27 UTC 2009

 Modified Files:
 	src/sys/arch/x86/x86: x86_autoconf.c

 Log Message:
 PR# port-i386/41929: genfb and machdep.acpi_vbios_reset=2 interaction

 When acpi_vbios_reset=2, invoke vga_post_call followed by vga_post_set_mode
 in the genfb pmf resume handler.


 To generate a diff of this commit:
 cvs rdiff -u -r1.42 -r1.43 src/sys/arch/x86/x86/x86_autoconf.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.