PR# port-i386/41929: genfb and machdep.acpi_vbios_reset=2 interaction

When acpi_vbios_reset=2, invoke vga_post_call followed by vga_post_set_mode
in the genfb pmf resume handler.